--- a/Frontend/student_initializer/pubspec.yaml
+++ b/Frontend/student_initializer/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   sqflite:
   go_router:
   flutter_riverpod:
+  shared_preferences:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
