--- a/Backend/llm-interface/src/main/resources/application.properties
+++ b/Backend/llm-interface/src/main/resources/application.properties
@@ -87,3 +87,5 @@ quarkus.rest-client.event-api.url=http://localhost:8081
 quarkus.rest-client.event-api.scope=jakarta.inject.Singleton
 quarkus.rest-client.learner-api.url=http://localhost:8081
 quarkus.rest-client.learner-api.scope=jakarta.inject.Singleton
+quarkus.rest-client.report-api.url=http://localhost:8081
+quarkus.rest-client.report-api.scope=jakarta.inject.Singleton
