--- a/Frontend/student_initializer/pubspec.yaml
+++ b/Frontend/student_initializer/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   shared_preferences:
   share_plus:
   list_english_words: 
+  markdown_widget:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
