llm-interface: reverted prompt back

--- a/Backend/llm-interface/src/main/resources/application.properties
+++ b/Backend/llm-interface/src/main/resources/application.properties
@@ -67,6 +67,7 @@ quarkus.langchain4j.ollama.devservices.enabled=false
 quarkus.langchain4j.ollama.llama.log-requests=true
 quarkus.langchain4j.ollama.llama.log-responses=true
 quarkus.langchain4j.ollama.llama.timeout=2m
+quarkus.langchain4j.ollama.llama.chat-model.temperature=0
 
 quarkus.langchain4j.huggingface.meta-llama.api-key=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
 
