llm-interface: added possible openAI support

--- a/Backend/llm-interface/src/main/resources/application.properties
+++ b/Backend/llm-interface/src/main/resources/application.properties
@@ -37,17 +37,14 @@ quarkus.langchain4j.pgvector.register-vector-pg-extension=false
 
 quarkus.langchain4j.embedding-model.provider=dev.langchain4j.model.embedding.onnx.bgesmallenq.AllMiniLmL6V2QuantizedEmbeddingModel
 
-
-rag.document-dir=src/main/resources/rag
 rag.max-results=2
-quarkus.langchain4j.easy-rag.path=src/main/resources/rag
+#quarkus.langchain4j.easy-rag.path=src/main/resources/rag
 
 #quarkus.infinispan-client.devservices.enabled=true
 #quarkus.langchain4j.chat-model.provider=openai
 
 #-------------------     PgVector Store Custom Properties     ---------------------------#
 #pgvector.database.host=localhost
-pgvector.database.port=11122
 pgvector.database.user=admin
 pgvector.database.password=admin
 #pgvector.database.table=embeddings
@@ -55,14 +52,16 @@ pgvector.database.password=admin
 
 quarkus.langchain4j.llama.chat-model.provider=ollama
 quarkus.langchain4j.meta-llama.chat-model.provider=huggingface
+quarkus.langchain4j.oai.chat-model.provider=openai
 
-langchain4j-ollama-dev-service.ollama.host=localhost
-langchain4j-ollama-dev-service.ollama.port=11434
-langchain4j-ollama-dev-service.ollama.endpoint=http://${langchain4j-ollama-dev-service.ollama.host}:${langchain4j-ollama-dev-service.ollama.port}
+
+use.openai=${USE_OPENAI}
+quarkus.langchain4j.openai.oai.api-key=${OPENAI_API_CHATBOT_KEY}
+quarkus.langchain4j.openai."model-name".base-url=${OPENAI_API_CHATBOT_BASE_URL}
 
 
 #quarkus.langchain4j.ollama.llama.base-url=${langchain4j-ollama-dev-service.ollama.endpoint}
-quarkus.langchain4j.ollama.llama.chat-model.model-id=qwen3:14b
+quarkus.langchain4j.ollama.llama.chat-model.model-id=${OLLAMA_MODEL_ID}
 quarkus.langchain4j.ollama.devservices.enabled=false
 quarkus.langchain4j.ollama.llama.log-requests=true
 quarkus.langchain4j.ollama.llama.log-responses=true
@@ -73,20 +72,11 @@ quarkus.langchain4j.huggingface.meta-llama.api-key=hf_IBgWkdYjCzUQGkbgxOsqMhSzBR
 
 
 #---------------------    RabbitMQ Client ---------------------------------#
-quarkus.rabbitmqclient.virtual-host=/
-quarkus.rabbitmqclient.username=user
-quarkus.rabbitmqclient.password=password
-quarkus.rabbitmqclient.hostname=localhost
-quarkus.rabbitmqclient.port=5672
+#quarkus.rabbitmqclient.virtual-host=/
+#quarkus.rabbitmqclient.username=user
+#quarkus.rabbitmqclient.password=password
+#quarkus.rabbitmqclient.hostname=localhost
+#quarkus.rabbitmqclient.port=5672
 
 
 quarkus.http.port=8082
-
-quarkus.rest-client.observation-api.url=http://localhost:8081
-quarkus.rest-client.observation-api.scope=jakarta.inject.Singleton
-quarkus.rest-client.event-api.url=http://localhost:8081
-quarkus.rest-client.event-api.scope=jakarta.inject.Singleton
-quarkus.rest-client.learner-api.url=http://localhost:8081
-quarkus.rest-client.learner-api.scope=jakarta.inject.Singleton
-quarkus.rest-client.report-api.url=http://localhost:8081
-quarkus.rest-client.report-api.scope=jakarta.inject.Singleton
