--- a/Backend/learn-service/src/main/resources/application.properties
+++ b/Backend/learn-service/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 quarkus.datasource.db-kind=mysql
 quarkus.datasource.username=mysql
 quarkus.datasource.password=admin
-quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/ba-database
 quarkus.datasource.jdbc.max-size=16
 
 quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.sql-load-script=initInserts.sql
 
 quarkus.hibernate-orm.log.sql=true
 quarkus.http.port=8081
 
-quarkus.rabbitmqclient.virtual-host=/
-quarkus.rabbitmqclient.username=user
-quarkus.rabbitmqclient.password=password
-quarkus.rabbitmqclient.hostname=localhost
-quarkus.rabbitmqclient.port=5672
+#quarkus.rabbitmqclient.virtual-host=/
+#quarkus.rabbitmqclient.username=user
+#quarkus.rabbitmqclient.password=password
+#quarkus.rabbitmqclient.hostname=localhost
+#quarkus.rabbitmqclient.port=5672
