--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,6 +1,6 @@
 HOST_IP_ADDRESS=host.docker.internal
 QUARKUS_PROFILE=docker
-OLLAMA_MODEL_ID=qwen3:14n
+QUARKUS_LANGCHAIN4J_OLLAMA__LLAMA__CHAT_MODEL_MODEL_ID=qwen3:14n
 OPENAI_API_CHATBOT_KEY=your-key
 OPENAI_API_CHATBOT_BASE_URL=https://your-openai-url.com
 USE_OPENAI=false
