--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -64,7 +64,7 @@ services:
     environment:
       - HOST_IP_ADDRESS=${HOST_IP_ADDRESS:-host.docker.internal}
       - QUARKUS_PROFILE=docker
-      - OLLAMA_MODEL_ID=${OLLAMA_MODEL_ID:qwen3:14n}
+      - QUARKUS_LANGCHAIN4J_OLLAMA__LLAMA__CHAT_MODEL_MODEL_ID
       - OPENAI_API_CHATBOT_KEY=${OPENAI_API_CHATBOT_KEY}
       - OPENAI_API_CHATBOT_BASE_URL=${OPENAI_API_CHATBOT_BASE_URL}
       - USE_OPENAI=${USE_OPENAI:-false}
