--- a/Backend/llm-interface/src/main/resources/application.properties
+++ b/Backend/llm-interface/src/main/resources/application.properties
@@ -50,25 +50,25 @@ pgvector.database.password=admin
 #pgvector.database.table=embeddings
 
 
-quarkus.langchain4j.llama.chat-model.provider=ollama
-quarkus.langchain4j.meta-llama.chat-model.provider=huggingface
-quarkus.langchain4j.oai.chat-model.provider=openai
+quarkus.langchain4j."llama".chat-model.provider=ollama
+quarkus.langchain4j."meta-llama".chat-model.provider=huggingface
+quarkus.langchain4j."oai".chat-model.provider=openai
 
 
 use.openai=${USE_OPENAI}
-quarkus.langchain4j.openai.oai.api-key=${OPENAI_API_CHATBOT_KEY}
-quarkus.langchain4j.openai."model-name".base-url=${OPENAI_API_CHATBOT_BASE_URL}
+quarkus.langchain4j.openai."oai".api-key=${OPENAI_API_CHATBOT_KEY}
+quarkus.langchain4j.openai."oai".base-url=${OPENAI_API_CHATBOT_BASE_URL}
 
 
 #quarkus.langchain4j.ollama.llama.base-url=${langchain4j-ollama-dev-service.ollama.endpoint}
-quarkus.langchain4j.ollama.llama.chat-model.model-id=${OLLAMA_MODEL_ID}
+quarkus.langchain4j.ollama."llama".chat-model.model-id=${QUARKUS_LANGCHAIN4J_OLLAMA__LLAMA__CHAT_MODEL_MODEL_ID:qwen3:14b}
 quarkus.langchain4j.ollama.devservices.enabled=false
-quarkus.langchain4j.ollama.llama.log-requests=true
-quarkus.langchain4j.ollama.llama.log-responses=true
-quarkus.langchain4j.ollama.llama.timeout=2m
-quarkus.langchain4j.ollama.llama.chat-model.temperature=0
+quarkus.langchain4j.ollama."llama".log-requests=true
+quarkus.langchain4j.ollama."llama".log-responses=true
+quarkus.langchain4j.ollama."llama".timeout=2m
+quarkus.langchain4j.ollama."llama".chat-model.temperature=0
 
-quarkus.langchain4j.huggingface.meta-llama.api-key=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
+quarkus.langchain4j.huggingface."meta-llama".api-key=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
 
 
 #---------------------    RabbitMQ Client ---------------------------------#
