--- a/Backend/learn-service/src/main/resources/application-dev.properties
+++ b/Backend/learn-service/src/main/resources/application-dev.properties
@@ -1,1 +1,1 @@
-quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/ba-database
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/ba-database
