--- a/Backend/learn-service/src/main/resources/application-docker.properties
+++ b/Backend/learn-service/src/main/resources/application-docker.properties
@@ -1,1 +1,1 @@
-quarkus.datasource.jdbc.url=jdbc:mysql://ba_database:3306/ba-database
+quarkus.datasource.jdbc.url=jdbc:postgresql://ba_database:5432/ba-database
