--- a/Backend/learn-service/src/main/resources/application.properties
+++ b/Backend/learn-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-quarkus.datasource.db-kind=mysql
-quarkus.datasource.username=mysql
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=postgres
 quarkus.datasource.password=admin
 quarkus.datasource.jdbc.max-size=16
 
