learn-service: CORS support

--- a/Backend/learn-service/src/main/resources/application.properties
+++ b/Backend/learn-service/src/main/resources/application.properties
@@ -9,6 +9,11 @@ quarkus.hibernate-orm.sql-load-script=initInserts.sql
 quarkus.hibernate-orm.log.sql=true
 quarkus.http.port=8081
 
+quarkus.http.cors=true
+quarkus.http.cors.origins=*
+quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
+quarkus.http.cors.headers=origin,content-type,accept,authorization
+
 #quarkus.rabbitmqclient.virtual-host=/
 #quarkus.rabbitmqclient.username=user
 #quarkus.rabbitmqclient.password=password
