--- a/Backend/learn-service/src/main/resources/application.properties
+++ b/Backend/learn-service/src/main/resources/application.properties
@@ -11,7 +11,7 @@ quarkus.http.port=8081
 
 quarkus.http.cors=true
 quarkus.http.cors.origins=*
-quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
+quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS,PATCH
 quarkus.http.cors.headers=origin,content-type,accept,authorization
 
 #quarkus.rabbitmqclient.virtual-host=/
