llm-interface: tag concept added

--- a/Backend/llm-interface/src/main/resources/application-dev.properties
+++ b/Backend/llm-interface/src/main/resources/application-dev.properties
@@ -15,3 +15,6 @@ quarkus.rest-client.learner-api.url=http://localhost:8081
 quarkus.rest-client.learner-api.scope=jakarta.inject.Singleton
 quarkus.rest-client.report-api.url=http://localhost:8081
 quarkus.rest-client.report-api.scope=jakarta.inject.Singleton
+
+quarkus.rest-client.observation-with-tags-api.url=http://localhost:8081
+quarkus.rest-client.observation-with-tags-api.scope=jakarta.inject.Singleton
