--- a/Backend/llm-interface/src/main/resources/application-docker.properties
+++ b/Backend/llm-interface/src/main/resources/application-docker.properties
@@ -19,3 +19,6 @@ quarkus.rest-client.learner-api.url=http://learn-service:8081
 quarkus.rest-client.learner-api.scope=jakarta.inject.Singleton
 quarkus.rest-client.report-api.url=http://learn-service:8081
 quarkus.rest-client.report-api.scope=jakarta.inject.Singleton
+
+quarkus.rest-client.observation-with-tags-api.url=http://learn-service:8081
+quarkus.rest-client.observation-with-tags-api.scope=jakarta.inject.Singleton
