--- a/Backend/llm-interface/src/main/resources/application.properties
+++ b/Backend/llm-interface/src/main/resources/application.properties
@@ -9,7 +9,7 @@ quarkus.log.console.enable=true
 quarkus.langchain4j.huggingface.chat-model.wait-for-model=true
 quarkus.langchain4j.huggingface.chat-model.enabled=true
 quarkus.langchain4j.huggingface.chat-model.return-full-text=false
-quarkus.langchain4j.huggingface.timeout=2m
+quarkus.langchain4j.huggingface.timeout=3m
 
 
 #quarkus.langchain4j.huggingface.chat-model.inference-endpoint-url=https://api-inference.huggingface.co/models/ZySec-AI/gemma-3-27b-tools
@@ -55,9 +55,9 @@ quarkus.langchain4j."meta-llama".chat-model.provider=huggingface
 quarkus.langchain4j."oai".chat-model.provider=openai
 
 
-use.openai=${USE_OPENAI}
-quarkus.langchain4j.openai."oai".api-key=${OPENAI_API_CHATBOT_KEY}
-quarkus.langchain4j.openai."oai".base-url=${OPENAI_API_CHATBOT_BASE_URL}
+use.openai=${USE_OPENAI:false}
+quarkus.langchain4j.openai."oai".api-key=${OPENAI_API_CHATBOT_KEY:yourkey}
+quarkus.langchain4j.openai."oai".base-url=${OPENAI_API_CHATBOT_BASE_URL:https://api.openai.com/v1}
 
 
 #quarkus.langchain4j.ollama.llama.base-url=${langchain4j-ollama-dev-service.ollama.endpoint}
@@ -80,3 +80,8 @@ quarkus.langchain4j.huggingface."meta-llama".api-key=hf_IBgWkdYjCzUQGkbgxOsqMhSz
 
 
 quarkus.http.port=8082
+
+quarkus.http.cors=true
+quarkus.http.cors.origins=*
+quarkus.http.cors.methods=GET, POST, PUT, DELETE, OPTIONS, PATCH
+quarkus.http.cors.headers=accept, authorization, content-type, x-requested-with
