llm-interface: application properties with default values

--- a/Backend/llm-interface/src/main/resources/application-docker.properties
+++ b/Backend/llm-interface/src/main/resources/application-docker.properties
@@ -5,10 +5,10 @@ rag.dir.path=/deployments/resources/rag
 
 
 quarkus.langchain4j.ollama.devservices.enabled=false
-#langchain4j-ollama-dev-service.ollama.host=192.168.178.139
+#langchain4j-ollama-dev-service.ollama.host=host.docker.internal
 #langchain4j-ollama-dev-service.ollama.port=11434
-#langchain4j-ollama-dev-service.ollama.endpoint=http://0.0.0.0:11434
-quarkus.langchain4j.ollama.llama.base-url=http://${HOST_IP_ADDRESS}:11434
+#langchain4j-ollama-dev-service.ollama.endpoint=http://host.docker.internal:11434
+quarkus.langchain4j.ollama."llama".base-url=http://${HOST_IP_ADDRESS:host.docker.internal}:11434
 
 
 quarkus.rest-client.observation-api.url=http://learn-service:8081
