api prefix in endpoints, markdwon competence explaination + endpoints definition

--- a/Backend/llm-interface/src/main/resources/application-dev.properties
+++ b/Backend/llm-interface/src/main/resources/application-dev.properties
@@ -7,14 +7,14 @@ langchain4j-ollama-dev-service.ollama.host=localhost
 langchain4j-ollama-dev-service.ollama.port=11434
 langchain4j-ollama-dev-service.ollama.endpoint=http://${langchain4j-ollama-dev-service.ollama.host}:${langchain4j-ollama-dev-service.ollama.port}
 
-quarkus.rest-client.observation-api.url=http://localhost:8081
+quarkus.rest-client.observation-api.url=http://localhost:8081/api
 quarkus.rest-client.observation-api.scope=jakarta.inject.Singleton
-quarkus.rest-client.event-api.url=http://localhost:8081
+quarkus.rest-client.event-api.url=http://localhost:8081/api
 quarkus.rest-client.event-api.scope=jakarta.inject.Singleton
-quarkus.rest-client.learner-api.url=http://localhost:8081
+quarkus.rest-client.learner-api.url=http://localhost:8081/api
 quarkus.rest-client.learner-api.scope=jakarta.inject.Singleton
-quarkus.rest-client.report-api.url=http://localhost:8081
+quarkus.rest-client.report-api.url=http://localhost:8081/api
 quarkus.rest-client.report-api.scope=jakarta.inject.Singleton
 
-quarkus.rest-client.observation-with-tags-api.url=http://localhost:8081
+quarkus.rest-client.observation-with-tags-api.url=http://localhost:8081/api
 quarkus.rest-client.observation-with-tags-api.scope=jakarta.inject.Singleton
