--- a/Backend/llm-interface/src/main/resources/application-docker.properties
+++ b/Backend/llm-interface/src/main/resources/application-docker.properties
@@ -11,14 +11,14 @@ quarkus.langchain4j.ollama.devservices.enabled=false
 quarkus.langchain4j.ollama."llama".base-url=http://${HOST_IP_ADDRESS:host.docker.internal}:11434
 
 
-quarkus.rest-client.observation-api.url=http://learn-service:8081
+quarkus.rest-client.observation-api.url=http://learn-service:8081/api
 quarkus.rest-client.observation-api.scope=jakarta.inject.Singleton
-quarkus.rest-client.event-api.url=http://learn-service:8081
+quarkus.rest-client.event-api.url=http://learn-service:8081/api
 quarkus.rest-client.event-api.scope=jakarta.inject.Singleton
-quarkus.rest-client.learner-api.url=http://learn-service:8081
+quarkus.rest-client.learner-api.url=http://learn-service:8081/api
 quarkus.rest-client.learner-api.scope=jakarta.inject.Singleton
-quarkus.rest-client.report-api.url=http://learn-service:8081
+quarkus.rest-client.report-api.url=http://learn-service:8081/api
 quarkus.rest-client.report-api.scope=jakarta.inject.Singleton
 
-quarkus.rest-client.observation-with-tags-api.url=http://learn-service:8081
+quarkus.rest-client.observation-with-tags-api.url=http://learn-service:8081/api
 quarkus.rest-client.observation-with-tags-api.scope=jakarta.inject.Singleton
