--- a/Frontend/student_initializer/.env
+++ b/Frontend/student_initializer/.env
@@ -12,12 +12,12 @@ IOS_BASE_LLM_PORT=8082
 ANDROID_BASE_HTTP=http://$ANDROID_BASE_IP:$ANDROID_BASE_PORT
 IOS_BASE_HTTP=http://$IOS_BASE_IP:$IOS_BASE_PORT
 
-ANDROID_BASE_LLM_HTTP=http://$ANDROID_BASE_IP:$ANDROID_BASE_LLM_PORT
-IOS_BASE_LLM_HTTP=http://$IOS_BASE_IP:$IOS_BASE_LLM_PORT
+ANDROID_BASE_LLM_HTTP=http://$ANDROID_BASE_IP:$ANDROID_BASE_LLM_PORT/api
+IOS_BASE_LLM_HTTP=http://$IOS_BASE_IP:$IOS_BASE_LLM_PORT/api
 
 ANDROID_BASE_WS=ws://$ANDROID_BASE_IP:$ANDROID_BASE_PORT
 IOS_BASE_WS=ws://$IOS_BASE_IP:$IOS_BASE_PORT
 
-ANDROID_BASE_PERSISTANT_HTTP=http://$ANDROID_BASE_IP:$ANDROID_BASE_PERSISTANT_PORT
-IOS_BASE_PERSISTANT_HTTP=http://$IOS_BASE_IP:$IOS_BASE_PERSISTANT_PORT
+ANDROID_BASE_PERSISTANT_HTTP=http://$ANDROID_BASE_IP:$ANDROID_BASE_PERSISTANT_PORT/api
+IOS_BASE_PERSISTANT_HTTP=http://$IOS_BASE_IP:$IOS_BASE_PERSISTANT_PORT/api
 
