readme updated -> fixed typos added information to env variables

--- a/Backend/.env
+++ b/Backend/.env
@@ -2,6 +2,7 @@ HOST_IP_ADDRESS=host.docker.internal
 QUARKUS_PROFILE=docker
 QUARKUS_LANGCHAIN4J_OLLAMA__LLAMA__CHAT_MODEL_MODEL_ID=qwen3:14b
 OPENAI_API_CHATBOT_KEY=your-key
-OPENAI_API_CHATBOT_BASE_URL=https://your-openai-url.com
+OPENAI_API_CHATBOT_BASE_URL=https://api.openai.com/v1/
+OPENAI_API_CHATBOT_MODEL_NAME=gpt-4o-mini
 USE_OPENAI=false
 
