--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -66,6 +66,7 @@ services:
       - QUARKUS_LANGCHAIN4J_OLLAMA__LLAMA__CHAT_MODEL_MODEL_ID
       - OPENAI_API_CHATBOT_KEY=${OPENAI_API_CHATBOT_KEY}
       - OPENAI_API_CHATBOT_BASE_URL=${OPENAI_API_CHATBOT_BASE_URL}
+      - OPENAI_API_CHATBOT_MODEL_NAME=${OPENAI_API_CHATBOT_MODEL_NAME}
       - USE_OPENAI=${USE_OPENAI:-false}
     depends_on:
       - embedding_store
