--- a/Backend/llm-interface/src/main/resources/application.properties
+++ b/Backend/llm-interface/src/main/resources/application.properties
@@ -58,7 +58,7 @@ quarkus.langchain4j."oai".chat-model.provider=openai
 use.openai=${USE_OPENAI:false}
 quarkus.langchain4j.openai."oai".api-key=${OPENAI_API_CHATBOT_KEY:yourkey}
 quarkus.langchain4j.openai."oai".base-url=${OPENAI_API_CHATBOT_BASE_URL:https://api.openai.com/v1}
-
+quarkus.langchain4j.openai."oai".chat-model.model-name=${OPENAI_API_CHATBOT_MODEL_NAME:gpt-4o-mini}
 
 #quarkus.langchain4j.ollama.llama.base-url=${langchain4j-ollama-dev-service.ollama.endpoint}
 quarkus.langchain4j.ollama."llama".chat-model.model-id=${QUARKUS_LANGCHAIN4J_OLLAMA__LLAMA__CHAT_MODEL_MODEL_ID:qwen3:14b}
