--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -73,6 +73,8 @@ services:
       - learn-service
     networks:
       - ba_backend
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
 volumes:
   ba_database_data:
