--- a/Frontend/student_initializer/.env
+++ b/Frontend/student_initializer/.env
@@ -9,8 +9,8 @@ IOS_BASE_PERSISTANT_PORT=8081
 ANDROID_BASE_LLM_PORT=8082
 IOS_BASE_LLM_PORT=8082
 
-ANDROID_BASE_HTTP=http://$ANDROID_BASE_IP:$ANDROID_BASE_PORT
-IOS_BASE_HTTP=http://$IOS_BASE_IP:$IOS_BASE_PORT
+ANDROID_BASE_HTTP=http://$ANDROID_BASE_IP:$ANDROID_BASE_PORT/api
+IOS_BASE_HTTP=http://$IOS_BASE_IP:$IOS_BASE_PORT/api
 
 ANDROID_BASE_LLM_HTTP=http://$ANDROID_BASE_IP:$ANDROID_BASE_LLM_PORT/api
 IOS_BASE_LLM_HTTP=http://$IOS_BASE_IP:$IOS_BASE_LLM_PORT/api
